--- a/HW1_numerical integration.ipynb
+++ b/HW1_numerical integration.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Например, для $$\\epsilon = 10^{-2}$$ и количестве итераций = 10:"
+    "Например, для $$\\epsilon = 10^{-2}$$"
    ]
   },
   {
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "print('число узлов', opt_uzl(1e-2, 10), 'значение интеграла', integration(func, opt_uzl(1e-2, 10)), sep = '\\n')"
+    "print('число узлов', opt_uzl(1e-2), 'значение интеграла', integration(func, opt_uzl(1e-2, 10)), sep = '\\n')"
    ]
   }
  ],
