--- a/HW1_numerical integration.ipynb
+++ b/HW1_numerical integration.ipynb
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "print('число узлов', opt_uzl(1e-2), 'значение интеграла', integration(func, opt_uzl(1e-2, 10)), sep = '\\n')"
+    "print('число узлов', opt_uzl(1e-2), 'значение интеграла', integration(func, opt_uzl(1e-2)), sep = '\\n')"
    ]
   }
  ],
